# coupon-filter-paper

./: CMakeLists.txt  CpF_with_CM.cpp  CpF_with_CM_BF.cpp  CpF_with_NDS.cpp  CpF_with_OnOff.cpp  CpF_with_SS.cpp  CpF_with_vHLL.cpp  README.md  find_opt_param.cpp
CouponFilter/: CouponFilter.h  CouponFilter_PrAnls.h
alg/: CM_BF.h  CountMin.h  NDS.h  On-Off sketch.h  QueryInterface.h  SpaceSaving.h  UpdateInterface.h  vHLL.h
lib/: Basic_Util.h  CAIDA_Anls.h  CAIDA_Util.h  MurmurHash3.h  Xorshift.h
script/: cpf_cm_var_mem.sh  cpf_cm_var_th.sh  cpf_cmbf_var_mem.sh  cpf_cmbf_var_th.sh  cpf_nds_var_mem.sh  cpf_nds_var_th.sh  cpf_onoff_var_mem.sh  cpf_onoff_var_th.sh  cpf_ss_var_th.sh  cpf_vhll_var_mem.sh  cpf_vhll_var_th.sh
